@@ -1,6 +1,7 @@
 # Add changes at the top of the list. Keep it in ASCII, and 80-char wide.
 # Do not insert empty lines here, update check depends on it.
 - SVN
+  - feature: added wrapper module 98_configDB (betateilchen)
   - feature: new module 70_PHTV.pm (loredo)
   - feature: JSONMETER: added statistic functions
   - feature: LightScene: added scene editor from UliM
